c - crash     b - bug fix    e - enhancement    f - new feature  n - note

2.5.6
  b - Made changes to record_jobinfo and supporting functions to be
      able to use dynamically allcated buffers for data. This fixed
      a problem where incoming data overran fixed sized buffers.


2.5.5
  b - change so gpus get written back to nodes file
  e - make it so that even if an array request has multiple consecutive '%' the slot 
      limit will be set correctly
  b - Fixed bug in job_log_open where the global variable logpath was freed instead 
      of joblogpath.
  b - Fixed memory leak in function procs_requested.
  b - Validated incoming data for escape_xml to prevent a seg-fault with incoming
      null pointers
  e - Added submit_host and init_work_dir as job attributes. These two
      values are now displayed with a qstat -f. The submit_host is
      the name of the host from where the job was submitted. init_work_dir
      is the working directory as in PBS_O_WORKDIR.
  e - change so blcr checkpoint jobs can restart on different node. Use
      configure --enable-blcr to allow.
  b - remove the use of a GNU specific function, and fix an error for solaris builds
  b - Updated PBS_License.txt to remove the implication that the software
      is not freely redistributable. 
  b - remove the $PBS_GPUFILE when job is done on mom
  b - fix a race condition when issuing a qrerun followed by a qdel that caused 
      the job to be queued instead of deleted sometimes.
  e - Implemented Bugzilla Bug 110. If a host in the nodes file cannot be resolved
      at startup the server will try once every 5 minutes until the node 
      will resolve and it will add it to the nodes list.
  e - Added a "create" method to pbs_server init.d script so a serverdb file
      can be created if it does not exist at startup time. This is an enhancement
      in reference to Bugzilla bug 90.
  e - Add code to verify the group list as well when VALIDATEGROUPS is set in torque.cfg